@@ -7,6 +7,7 @@ glibc (2.3.6-3) UNRELEASED; urgency=low
   * Use the new slibdir, libdir, rtlddir variables to build the various
     flavours of the libc. Put them directly in the final directory, and
     remove the corresponding tweaks done after the make install phase.
+  * Install the 32-bit libraries in /emul/ia32-linux(/usr)/lib on amd64.
 
   [ Clint Adams ]
   * Get rid of -o as a binary operator to [ in tzconfig and postinst.
